# lsMisc

./: .gitmodules  .nonusasciiignore  AddBaseElement.cpp  AddCharset.cpp  BringWinTop.cpp  BringWinTop.h  BrowseFolder.cpp  BrowserEmulation.cpp  CHandle.h  CLogger.cpp  CLogger.h  CTaskBarProgress.cpp  CTaskBarProgress.h  CenterWindow.cpp  ChangeDirPos.cpp  CheckMessageBox.cpp  CheckMessageBox.h  CheckWinMacro.cpp  CloseConsoleWin.cpp  CommandLineParser.cpp  CommandLineParser.h  CommandLineString.h  CommandLineUtil.cpp  CompareFileTime.cpp  ConfirmErrorRetry.cpp  CreateCompleteDirectory.cpp  CreateCompleteDirectory.h  CreateFolderIniPath.cpp  CreateFolderIniPath.h  CreateProcessCommon.cpp  CreateShortcutFile.cpp  CreateShortcutFile.h  CreateSimpleWindow.cpp  CreateSimpleWindow.h  CurDirSaver.cpp  CurDirSaver.h  DebugMacro.cpp  DebugMacro.h  DebugNew.cpp  DebugNew.h  (+179 more)
CResizableDialog/: ResizableGrip.cpp  ResizableLayout.cpp  ResizableState.cpp
CSendKeys/: SendKeys.cpp
SessionGlobalMemory/: .gitignore  Github.url  README.md  SessionGlobalMemory.h  StdAfx.cpp  StdAfx.h  test.cpp  test2013.sln  test2013.vcxproj  test2015.sln  test2015.vcxproj  test2019.sln  test2019.vcxproj
cppclr/: clrHelper.cpp  clrHelper.h  clrString.cpp  clrString.h  clrWindowLocker.h
lsMiscTest/: .gitignore  CMakeLists.txt  RunlsMiscTest.py  StdAfx.h  debug.h  gtestCHandle.cpp  gtestChangeFilenamable.cpp  gtestCheckMessageBox.cpp  gtestCommandLineParser.cpp  gtestCommnadLineString.cpp  gtestDebugMacro.cpp  gtestExpandPath.cpp  gtestFindTopWindowFromPID.cpp  gtestFormatSizeof.cpp  gtestGetAppVersion.cpp  gtestGetLocalPathFromNetPath.cpp  gtestGetProcessList.cpp  gtestGetUnreparsePath.cpp  gtestGetVersionString.cpp  gtestGetVolumeInfo.cpp  gtestGtest.cpp  gtestGtestMock.cpp  gtestHira2Kata.cpp  gtestI18N.cpp  gtestI18NBeta.cpp  gtestISqlPrivateProfile.cpp  gtestIsDuplicateInstance.cpp  gtestIsWindowsVersion.cpp  gtestLocker.cpp  gtestMoveWindowCommon.cpp  gtestNTFSTransaction.cpp  gtestOpParser.cpp  gtestOpenCommon.cpp  gtestPathUtil_linux.cpp  gtestPathUtil_win.cpp  gtestRevealFolder.cpp  gtestRunCommandGetResult.cpp  gtestSHMoveFile.cpp  gtestSessionGlobalMemory.cpp  gtestSetPriority.cpp  (+24 more)
lsMiscTest/GetMutex/: GetMutex.cpp  GetMutex.vcxproj  GetMutex.vcxproj.filters  framework.h
lsMiscTest/GetOpenFileTest/: CMakeLists.txt  GetOpenFileTest.cpp  GetOpenFileTest.rc  GetOpenFileTest.vcxproj  GetOpenFileTest.vcxproj.filters  Resource.h
lsMiscTest/ReturnMainWndHandle/: CMakeLists.txt  Resource.h  ReturnMainWndHandle.cpp  ReturnMainWndHandle.rc  ReturnMainWndHandle.vcxproj  ReturnMainWndHandle.vcxproj.filters
lsMiscTest/RunCommandGetResultCtrlCTest/: CMakeLists.txt  RunCommandGetResultCtrlCTest.cpp  RunCommandGetResultCtrlCTest.vcxproj  RunCommandGetResultCtrlCTest.vcxproj.filters  stdafx.h
lsMiscTest/SetSessionGlobalMemory/: CMakeLists.txt  SetSessionGlobalMemory.cpp  SetSessionGlobalMemory.vcxproj  SetSessionGlobalMemory.vcxproj.filters
lsMiscTest/guisamples/: guisamples.cpp  guisamples.h  guisamples.rc  guisamples.vcxproj  guisamples.vcxproj.filters  guisamplesDlg.cpp  guisamplesDlg.h  resource.h
lsMiscTest/guisamples/res/: guisamples.rc2
lsMiscTest/playground/: CMakeLists.txt  playground.cpp  playground.vcxproj  playground.vcxproj.filters
lsMiscTest/printversion/: CMakeLists.txt  pch.h  printversion.cpp  printversion.vcxproj  printversion.vcxproj.filters
lsMiscTest/testBrowseFolder/testBrowseFolder/: main.cpp
lsMiscTest/testReplaceFileHelper/testReplaceFileHelper/: main.cpp
lsMiscTest/testScreenSaver/: Resource.h  framework.h  testScreenSaver.cpp  testScreenSaver.rc  testScreenSaver.vcxproj  testScreenSaver.vcxproj.filters
lsMiscTest/testsqliteserialize/testsqliteserialize/: testsqliteserialize.cpp
lsMiscTest/waitinput/: CMakeLists.txt  waitinput.cpp  waitinput.vcxproj  waitinput.vcxproj.filters
obsoletes/stlsoft/include/stlsoft/: stlsoft.h
stdQt/: ambapp.cpp  ambapp.h  inisettings.cpp  stdQt.cpp  stdQt.h  stdQt_linux.cpp  stdQt_win32.cpp  waitingcursor.cpp  waitingcursor.h
stdQt/TestStdQt/: testqstring.cpp  teststdqt.cpp
stdosd/: DetectVM.cpp  DetectVM.h  I18NBeta.h  PathString.h  PathUtil_linux.cpp  PathUtil_win.cpp  SetPrority_linux.cpp  SetPrority_win.cpp  blockedbool.cpp  blockedbool.h  stdosd.cpp  stdosd.h  stdosd_exception.h  stdosd_linux.cpp  stdosd_literal.h  stdosd_win.cpp
stdwin32/: stdwin32.cpp  stdwin32.h
stdwin32/stdwin32test/: StdAfx.cpp  stdwin32test.cpp
stlsoft/include/stlsoft/: stlsoft.h
